# CodeMapLocalization

./: .gitignore  .gitmodules  LICENSE  autoformat.sh  common.mk  test.py
autodecoder/: autodecoder.py
core/: Makefile  test.c
core/include/: bitmatrix_extraction_impl.h  bitwise_utils.h  bm_extraction_impl.h  code_extraction.h  debug_prints.h  localization_loop.h  location_decode.h  micro_image_utils  mls_query.h  msg_defs.h  optical_flow.h  position_decode_impl.h  tests.h  visual_odometry.h
core/src/: bitwise_utils.c  code_extraction.c  debug_prints.c  localization_loop.c  location_decode.c  micro_image_utils  mls_index.c  mls_query.c  optical_flow.c  phase_correlation.c  visual_odometry.c
directional_m_sequence/: Makefile
directional_mls/: Makefile
directional_mls/src/: dmls_gen.cpp  dmls_gen.hpp  main.cpp  mls_search.cpp  mls_search.hpp
dmls/: Makefile
dmls/src/: dmls_gen.cpp  dmls_gen.hpp  main.cpp
dmls_gen/: Makefile
dmls_gen/include/: dmls_gen.hpp  roulette.hpp
dmls_gen/src/: bitwise_utils.c  bitwise_utils.h  dmls_gen.cpp  dmls_gen.hpp  main.cpp
dmls_lut/: Makefile
dmls_lut/src/: lut.c  lut.h  main.c  seq.h
embedded/: Makefile
embedded/include/: bit_matrix.h  bm_extraction_impl.h  code_extraction.h  code_map_filter.h  debug_prints.h  decode.h  decode_location.h  hilbert_gen.h  image_filter.h  image_filter_extra.h  location_decode.h  mls_query.h  optical_flow.h  test_utils.h  tests.h
embedded/src/: code_extraction.c  debug_prints.c  decode.c  decode.h  decode_location.c  location_decode.c  lut_dat.c  main.c  mls_query.c  phase_correlation.c
esp32_app/: Makefile  sdkconfig
esp32_app/components/: esp-dsp  esp32-camera
esp32_cam_app/: CMakeLists.txt  sdkconfig
esp32_cam_app/components/code_map_localization/: CMakeLists.txt  component.mk  fft.c  include  phase_correlation.c  src
map_codec_gen/: Makefile
map_index_gen/: Makefile
mls_gen/: lfsr.py  mls.py  mls_gen.py  test.py
python/: test.py
python_app/: Makefile  code_map.py  code_map_0_0.pbm  include  serial_app.py  sim_app.py  webcam_app.py
ros2/code_map_localization/: codemap  package.xml  setup.cfg  setup.py
ros2/code_map_localization/code_map_localization/: convert_message.py  serial.py  webcam.py
ros2/code_map_localization/launch/: serial.launch.py  webcam.launch.py
ros2/code_map_localization_core/: CMakeLists.txt  Makefile  package.xml  src
ros2/code_map_localization_msgs/: CMakeLists.txt  package.xml
ros2/code_map_localization_msgs/msg/: Correlation.msg  Localization.msg  LocationMatch.msg  Odometry.msg
scripts/: autoformat.sh  mjpeg2raw.sh
sequences/: dmls_15_5005_2152db51a1538b22.yaml  dmls_16_6459_6bac4a8b910da83b.yaml  dmls_16_6941_e9467727079fe979.yaml  dmls_16_6961_dd9d6caa47fb5615.yaml  dmls_16_7181_3b0d21d7dfadcaf8.yaml  dmls_16_7260_3eb8a687eeee976e.yaml  dmls_16_7505_6e3d83c8d885e184.yaml  dmls_16_7549_4453777d2d292b0b.yaml  dmls_16_7764_b0f0d4304413d2f9.yaml  dmls_16_7778_f908418a11dab9e4.yaml  dmls_16_7785_d84e4e3e9adde022.yaml  dmls_16_7860_4d5d52d6c51124f7.yaml  dmls_16_8009_9cda187a0e238baa.yaml  dmls_17_12007_e378334c5b0b55b6.yaml  dmls_17_12247_2ba11d4c12da2e17.yaml  dmls_17_13079_3c7c00f641fe3a6e.yaml  dmls_17_13567_17364461f9e92785.yaml  dmls_17_13829_3c114037da6f0028.yaml  dmls_17_14421_b05759b4f239efb4.yaml  dmls_17_15159_7245a822e9ce310d.yaml  dmls_17_15354_31a348fc89bd9b52.yaml  dmls_17_15433_b6ae2bf0dd20f3af.yaml  dmls_17_15743_b3925b6c5b1f03b3.yaml  dmls_18_19595_dba01c366a4ef564.yaml  dmls_18_19677_e9aeaa91f4cb4e26.yaml  dmls_18_20584_145d0113cea4f6f1.yaml  dmls_18_21161_6388aaede6b97c86.yaml  dmls_18_21615_cc03125bad9c61a0.yaml  dmls_18_22229_7358adaf05e72a1a.yaml  dmls_18_24153_33b492001505d9bd.yaml  dmls_19_36107_c25c1a05fc86211a.yaml  dmls_19_38636_92aea403dad4b071.yaml  dmls_19_39294_c4eb1a1d93e98377.yaml  dmls_19_39724_1a914000f9171cc3.yaml  dmls_19_39910_6fccec0ca99071c3.yaml  dmls_19_40094_e1720f1d1a9cbdc9.yaml  dmls_19_40523_ace6f320fb5ca7b2.yaml  dmls_20_55064_1202045650f16117.yaml  dmls_20_55896_2c95a95f8746cc36.yaml  dmls_20_57537_5d3d452419b7b353.yaml
simulation/: Makefile  code_map.pbm  gui.py  include  sim.py  sim_wrapper.py  src
stash/: csv_rx_stream.py  index.html  lookup_gen.py  mecanum.ino  mouse_capture.py
(+102 files in other folders)
