<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>code_map_localization</name>
  <version>0.0.0</version>
  <description>ROS2 wrapper camera based code map localization</description>
  <maintainer email="me@wenzheng.li">wzli</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>code_map_localization_msgs</exec_depend>
  <exec_depend>code_map_localization_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
